--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <title>Tarot - 塔罗牌占卜</title>
+    <title>Tarot - 塔罗牌占卜 - fcic.cc</title>
     <meta name="keywords" content="Tarot - 塔罗牌占卜" />
     <meta name="description" content="Tarot - 塔罗牌占卜" />
     <meta property="og:description" content="Tarot - 塔罗牌占卜" />
